# EOS_Contracts_Inheritance

./: README.md
InheritAgent/: CMakeLists.txt  README.txt
InheritAgent/include/: InheritAgent.hpp
InheritAgent/src/: CMakeLists.txt  InheritAgent.cpp
InheritClt/: CMakeLists.txt  README.txt
InheritClt/include/: InheritClt.hpp
InheritClt/ricardian/: InheritClt.clauses.md
InheritClt/src/: CMakeLists.txt  InheritClt.cpp
